[package]
name = "tokio-cancel-guard"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Zero-cost cancellation-safety primitives for tokio::select! — DeferGuard, Shield, and CancelTrack"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/tokio-cancel-guard"
keywords = ["tokio", "async", "cancellation", "future", "select"]
categories = ["asynchronous", "concurrency"]

[dependencies]
pin-project = "1"
tokio = { version = "1", features = ["rt", "macros", "time"] }
tracing = { version = "0.1", optional = true }

[features]
tracing = ["dep:tracing"]

[dev-dependencies]
tokio = { version = "1", features = ["macros", "time", "rt", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
